# meteo_toolbox

./: .gitignore  Developement.md  Readme.md  config.yaml  devsetup.sh  download.py  grib.py  horizontal.py  icon_download.sh  misc.py  pyproject.toml  requirements.txt  run.py  skewt.py  skewt_wyoming.py  testsetup.sh  vertical_from_grib.py  xar.py
aggregator/: dwd_icon.py  wyoming_sounding.py
examples/: config.yaml  refactor.yaml
metchart/: customization.py  debug.py  manager.py  run.py  skewt.py
metchart/aggregator/: __init__.py  dwd_icon.py  netcdf.py  wyoming_sounding.py
metchart/modifier/: diff.py  merge.py
metchart/plotter/: __init__.py  debug_data.py  graph.py  horizontal.py  meteogram.py  skewt.py  vertical_from_grib.py
modifier/: merge.py
plotter/: horizontal.py  meteogram.py  vertical_from_grib.py
test/: cross.py  grib.py  grib_info.py
web/: index.html  index.js  style.css
