[project]
name = "metchart"
version = "0.0.3"
dependencies = [
	"metpy",
	"xarray",
	"cfgrib",
	"pyyaml",
	"cartopy",
	"bz2",
]
description = "declarative weather chart plotter"
readme = "Readme.md"
license = {"file" = "LICENSE"}

[project.scripts]
metchart = "metchart.run:main"

[tool.setuptools.packages.find]
include = ["metchart", "metchart.*"]

[build-system]
requires = ['setuptools >= 61.0']
build-backend = "setuptools.build_meta"
